--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+    "deno.enable": true,
     "editor.formatOnSave": true,
-    "errorLens.exclude": ["**.*"]
+    "errorLens.exclude": ["**.*"],
+    "triggerTaskOnSave.on": true,
+    "triggerTaskOnSave.tasks": {
+        "test": ["*.ts"]
+    }
 }
