--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,7 +18,7 @@
                 "--allow-read",
                 "--allow-write",
                 "--allow-run",
-                "build.ts",
+                "generate.ts",
                 ".\\examples"
             ]
         },
@@ -26,7 +26,7 @@
             "label": "build reload",
             "type": "shell",
             "command": "deno",
-            "args": ["run", "--reload", "--allow-read", "--allow-run", "build.ts", ".\\examples"]
+            "args": ["run", "--reload", "--allow-read", "--allow-run", "generate.ts", ".\\examples"]
         }
     ]
 }
