--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,6 @@
     "triggerTaskOnSave.tasks": {
         "test": ["*.ts"]
     },
-    "deno.import_intellisense_origins": {
-        "https://deno.land": true
-    }
+    "deno.lint": true,
+    "deno.unstable": true
 }
